{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 36,
  "lineage": "26f6e7c7-817d-99bb-38a8-34e3f0635060",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c64dd618a49aeee8",
            "arn": "arn:aws:ec2:us-east-2:579638992486:instance/i-0cdd5800e8f15c366",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cdd5800e8f15c366",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mahi_amazon",
            "monitoring": false,
            "primary_network_interface_id": "eni-0776cbeb0715cd06e",
            "private_dns": "ip-192-168-1-227.us-east-2.compute.internal",
            "private_ip": "192.168.1.227",
            "public_dns": "ec2-18-216-109-37.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.109.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1ff7af2b3875859",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0400493c2fd0bddd3",
            "tags": {
              "Name": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed241f1080f3754f"
            ]
          },
          "depends_on": [
            "aws_instance.slave1",
            "aws_instance.slave2",
            "aws_security_group.default",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c64dd618a49aeee8",
            "arn": "arn:aws:ec2:us-east-2:579638992486:instance/i-04b7ec70c0f329b9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04b7ec70c0f329b9c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mahi_amazon",
            "monitoring": false,
            "primary_network_interface_id": "eni-0db39cf1e3f7f861d",
            "private_dns": "ip-192-168-2-54.us-east-2.compute.internal",
            "private_ip": "192.168.2.54",
            "public_dns": "ec2-18-219-140-57.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.140.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b827dd1c1150b6ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003c984aa4c55e87c",
            "tags": {
              "Name": "Slave1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed241f1080f3754f"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c64dd618a49aeee8",
            "arn": "arn:aws:ec2:us-east-2:579638992486:instance/i-0195e4d7118a21a00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0195e4d7118a21a00",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mahi_amazon",
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbe193e9a3527e2a",
            "private_dns": "ip-192-168-2-110.us-east-2.compute.internal",
            "private_ip": "192.168.2.110",
            "public_dns": "ec2-3-16-138-3.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.138.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066a953984cffe213",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003c984aa4c55e87c",
            "tags": {
              "Name": "Slave2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed241f1080f3754f"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07a5beb1352dd5da3",
            "owner_id": "579638992486",
            "vpc_id": "vpc-06389335c52ae4597"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c5954024b5122fe",
            "owner_id": "579638992486",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a5beb1352dd5da3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible_public"
            },
            "vpc_id": "vpc-06389335c52ae4597"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ce27011415c56a3",
            "route_table_id": "rtb-08c5954024b5122fe",
            "subnet_id": "subnet-0400493c2fd0bddd3"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:579638992486:security-group/sg-0ed241f1080f3754f",
            "description": "Allow http,ssh and IMCP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ed241f1080f3754f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": null,
            "owner_id": "579638992486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06389335c52ae4597"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:579638992486:subnet/subnet-003c984aa4c55e87c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-003c984aa4c55e87c",
            "map_public_ip_on_launch": false,
            "owner_id": "579638992486",
            "tags": {
              "Name": "ansible_private"
            },
            "vpc_id": "vpc-06389335c52ae4597"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:579638992486:subnet/subnet-0400493c2fd0bddd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0400493c2fd0bddd3",
            "map_public_ip_on_launch": false,
            "owner_id": "579638992486",
            "tags": {
              "Name": "ansible_public"
            },
            "vpc_id": "vpc-06389335c52ae4597"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:579638992486:vpc/vpc-06389335c52ae4597",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-066c328a0ecd15e3c",
            "default_route_table_id": "rtb-02eae1c6e492ca7db",
            "default_security_group_id": "sg-0bb29deba1714a557",
            "dhcp_options_id": "dopt-ad05f9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06389335c52ae4597",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02eae1c6e492ca7db",
            "owner_id": "579638992486",
            "tags": {
              "Name": "ansible_vpc"
            }
          }
        }
      ]
    }
  ]
}